--- a/Face_Emotion_Recognition_Demo.ipynb
+++ b/Face_Emotion_Recognition_Demo.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOccw0XVooDTV3JTMfJyGE1",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOccw0XVooDTV3JTMfJyGE1"
     },
     "kernelspec": {
       "name": "python3",
@@ -19,18 +18,8 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jackrenner1/Emotion-Recognition/blob/main/Face_Emotion_Recognition_Demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -146,7 +135,7 @@
         "id": "ygnKCEiHFLUe",
         "outputId": "2d58cc34-8718-446f-848a-eb045e4e0b71"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +183,7 @@
         "id": "graN4ikMGEFh",
         "outputId": "11d0c13a-1d9a-437c-c7d9-7b3d2f7a5ecf"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +231,7 @@
         "id": "YpFHuMDVFNgE",
         "outputId": "fa375751-c40a-48f0-8ce8-a9bcaf2a2ef0"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +279,7 @@
         "id": "uEccA2DiFOFC",
         "outputId": "7d4c2231-33ee-44ca-e007-8df955fea7b9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,7 +327,7 @@
         "id": "UkEwxyBtFP5d",
         "outputId": "ac77c443-36f2-4f78-f59b-f80d872bdc22"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +375,7 @@
         "id": "sQQRFut6FRVe",
         "outputId": "cd619ed1-e379-4c0a-890b-860832339b17"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,7 +423,7 @@
         "id": "y9bzVUrFFR4s",
         "outputId": "71b41a7f-99f0-44f2-a0e9-563598ba0c80"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
